@@ -10,6 +10,9 @@
 - added support for promises for the `OPENCLIENT()` method
 - added support for promises for the `FileStorage`
 - added support for promises for the `HttpFile`
+- added support for promises for the `TMSCLIENT().call()` method
+- added support for promises for the `Mail.try()` method
+- added support for promises for the `REQUEST()` method
 
 ========================
 0.0.51
